--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-select": "^1.2.2",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.22",
     "lucide-react": "^0.452.0",
     "next": "15.5.3",
     "next-intl": "^4.3.9",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "sonner": "^2.0.7",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
