--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next-intl": "^4.3.9",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "recharts": "^2.13.3",
     "sonner": "^2.0.7",
     "vaul": "^1.1.2",
     "zod": "^3.24.1"
