--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "lucide-react": ["./lib/icons/lucide-react"]
+      "lucide-react": ["./lib/icons/lucide-react"],
+      "recharts": ["./src/lib/recharts"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
