--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/client": "^6.16.2",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-select": "^1.2.2",
@@ -25,6 +26,7 @@
     "next-intl": "^4.3.9",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.63.0",
     "recharts": "^2.13.3",
     "sonner": "^2.0.7",
     "vaul": "^1.1.2",
